--- a/views/space.ejs
+++ b/views/space.ejs
@@ -122,6 +122,9 @@
         // if there is no dom element, create it.
         if (document.querySelector('#' + data.id) === null) {
             el = document.createElement(data.tagName);
+            if(data.tagName === 'a-asset-item'){
+                el.setAttribute('src','default');
+            }
             console.log('creating dom element');
             el.setAttribute('id', data.id);
             this.get('attributes').once().map().once((data, key) => {
