--- a/views/space.ejs
+++ b/views/space.ejs
@@ -44,17 +44,23 @@
 </div>
 
 <nav class="navbar sticky-top navbar-expand-md navbar-light bg-white justify-content-between">
-    <a class="navbar-brand" href="#">
-        <img src="/images/W-1100x1100.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        <%= spaceid %>
+    <a class="navbar-brand">
+        <img id='logo'src="/images/W-1100x1100.png" width="30" height="30" class="d-inline-block align-top" alt="">
     </a>
-    <div id = 'nav-user'>
-        <div id="sign" class="my-2 my-lg-0">
-            <button id="sign-btn" class="btn btn-outline-primary my-2 my-sm-0">
-                <i class="fas fa-user-circle"></i> Sign In
-            </button>
+
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <div id="title" class="nav-link"><%= spaceid%></div>
+            </li>
+        </ul>
+        <div id = 'nav-user'>
+            <div id="sign" class="my-2 my-lg-0">
+                <button id="sign-btn" class="btn btn-outline-primary my-2 my-sm-0">
+                    <i class="fas fa-user-circle"></i> Sign In
+                </button>
+            </div>
         </div>
-    </div>
+
 </nav>
 
 
@@ -107,11 +113,21 @@
 <script>
     // navBar
     ;(() => {
-
-        jq('#logo').on('click', function(){
-            //edit tittle
-        });
         jq('.navbar-brand').attr('href', location.origin);
+
+        jq('#title').on('click', function(){
+            let input = document.createElement('input');
+            input.setAttribute('value', this.textContent);
+            this.replaceChild(input, this.firstChild);
+            this.appendChild( input );
+            input.focus();
+            input.addEventListener('keyup', function(event){
+                if(event.key === 'Enter' ){
+                    G.space.get('title').put(this.value);
+                    this.remove();
+                }
+            })
+        });
         jq('#sign-btn').on('click', (e) => {
             let m = jq('#modal-sign');
             m.modal('show')
@@ -214,6 +230,14 @@
             G.objects = G.space.get('objects');
         }
 
+        let initTitle = function(){
+            let t = jq('#title');
+            G.space.once(function(data, key){
+                console.log(data.title);
+                t.text(data.title);
+            })
+        }
+
         let initAssets= function(){
             G.assets.map().once( createEl );
         }
@@ -235,6 +259,7 @@
 
 
         initPath();
+        initTitle();
         initAssets();
         initObjects();
     }
@@ -250,8 +275,7 @@
                 rotation: {x:0, y:45, z:45},
                 scale: {x:1, y:1, z:1},
                 color: 'blue',
-                // custom attribute name by aframe custom component
-                // 'transform-controls' : { activated: false },
+                'transform-controls' : { activated: false },
             }
         };
 
@@ -259,73 +283,18 @@
 
         G.objects.get( obj.id ).put(obj);
         G.scene.get('children').set( G.objects.get( obj.id ) );
-
-
     }
 
     // initialize and subscribe
     ;(()=>{
         I();
-
-    })();
-
-    // sign in and up
-    ;(() => {
-
-        jq('#sign-btn').on('click', (e) => {
-            let m = jq('#modal-sign');
-            m.modal('show')
-        });
-
-        jq('#up').on('click', function () {
-            let form = check();
-            if (!form) {
-                return
-            }
-            S.user.create(form.alias, form.pass, async (ack) => {
-                if (ack.err) {
-                    return S.tell(ack.err)
-                }
-                check.up = true;
-                await S.user.auth(form.alias, form.pass, logined);
-            });
-        });
-
-        jq('#in').on('click', async function () {
-            let form = check();
-            if (!form) {
-                return
-            }
-            await S.user.auth(form.alias, form.pass, logined);
-        });
-
-        let check = () => {
-            let form = {alias: (jq('#alias').val() || '').toLowerCase(), pass: jq("#pass").val() || ''};
-            if (6 > form.alias.length) {
-                S.tell("Your username needs to be longer than 5 letters.");
-                return;
-            }
-            if (9 > form.pass.length) {
-                S.tell("Your passphrase needs to be longer than 9 letters.");
-                return;
-            }
-            return form;
-        }
-
-        let logined = (ack) => {
-            if (ack.err) {
-                return S.tell(ack.err)
-            }
-            console.log(ack);
-            jq('#modal-sign').modal('hide');
-            let e = jq('#sign');
-            let alias = S.user.is.alias;
-            S.user.recall({sessionStorage: true}); // 세션에 로그인 정보 저장
-            S.tell('welcome, ' + alias + '!');
-        }
     })();
 
     ;(() => {
+        G.space.get('title').on( function(data){
+            jq('#title').text(data);
+        })
+
         let syncPosition = function ( data, key ){
             let el = document.querySelector('#'+key);
             console.log( 'updated position of '+ key );
