Fix a bug of event to detect leaving user.

--- a/views/space.ejs
+++ b/views/space.ejs
@@ -347,7 +347,7 @@
             G.me.get('now').put(false);
         })
         window.onbeforeunload = function(e){
-            window.dispatchEvent(spaceoff);
+            window.dispatchEvent(S.spaceoff);
         }
     })();
 
